# img_classify

./: README.html  README.rst  a.py  others.py  pyproject.toml  requirements.txt  setup.py  tools.py
.github/workflows/: python-package.yml  python-publish.yml
img_classify/: __init__.py  dataset.py  downloader.py  evaluate_model.py  others.py  tools.py
